@@ -3,4 +3,3 @@ exports.server = require("./lib/server");
 
 // Handlers
 exports.handlers = require("./lib/handlers");
-exports.handler = exports.handlers.handler;
