@@ -1,5 +1,7 @@
 "use strict";
 
+var handler = require("./handler");
+
 /*
     // Map URL patterns to functions
     var url_map = urls([
@@ -17,7 +19,7 @@ function map_urls(url_map) {
     for(i=0; i<url_map.length; i++) {
         (function() {
             var pattern = url_map[i][0];
-            var handler = url_map[i][1];
+            var callback = handler(url_map[i][1]);
 
             var j = 1;
             var param_names = {};
@@ -64,7 +66,7 @@ function map_urls(url_map) {
                         params[param_names[param_index]] = matches[param_index];
                     }
 
-                    handler(request, response, {url: params});
+                    callback(request, response, {url: params});
 
                     return true;
                 }
